[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["fdelca <franciscodelca@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
tqdm = "^4.66.4"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
